[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "drone-airspace-governance-mcp"
version = "1.0.0"
description = "Drone Airspace Governance tools for AI agents. Capabilities: classify operation, bvlos risk assessment, remote id compliance. Built by MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "meok", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0"]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/drone-airspace-governance-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
drone_airspace_governance_mcp = "server:main"
